# r34-downloader

./: .gitignore  Find.hs  LICENSE.txt  ParseArgs.hs  README.md  Search.hs  Utilities.hs  help.txt  package.yaml  r34downloader.hs  rule34-paheal-downloader.cabal  stack.yaml
.github/workflows/: matrix.yml
src/: Download.hs  Find.hs  Links.hs  Main.hs  MainDriver.hs  Messages.hs  ParseArgs.hs  Strings.hs  Utilities.hs  main.qml  r34GUI.glade  r34MainCMD.hs  r34MainGUI.hs  rule34-paheal-downloader.cabal
src/GUI/: r34GUI.glade
