name: rule34-paheal-downloader
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE.txt
maintainer: z.palmer@openmailbox.org
synopsis: Downloader for rule34.paheal.net with a GUI and CMD interface.
category: Web
author: ZedPea
extra-source-files: README.md	
data-files: src/r34GUI.glade

executable r34DownloaderGUI
    main-is: r34MainGUI.hs
    build-depends: base >=4.9 && <4.10, HTTP, network-uri, tagsoup, bytestring, 
                   directory, unbounded-delays, filepath, cmdargs, gtk3, glib, 
                   text
    default-language: Haskell2010
    other-modules: Paths_rule34_paheal_downloader, Find, MainDriver, Strings, 
                   Utilities
    hs-source-dirs: src
    ghc-options: -threaded

executable r34Downloader
    main-is: r34MainCMD.hs
    build-depends: base >=4.9 && <4.10, HTTP, network-uri, tagsoup, bytestring,
                   directory, unbounded-delays, filepath, cmdargs
    default-language: Haskell2010
    other-extensions: DeriveDataTypeable
    other-modules: Find, MainDriver, ParseArgs, Strings, Utilities
    hs-source-dirs: src
    ghc-options: -threaded
