name: rule34-paheal-downloader
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE.txt
maintainer: z.palmer@openmailbox.org
synopsis: Downloader for rule34.paheal.net with a GUI and CMD interface.
category: Web
author: ZedPea
extra-source-files: README.md	
data-files: src/main.qml

executable r34Downloader
    main-is: Main.hs
    build-depends: base >= 4.9 && <4.10, hsqml, text, HTTP, tagsoup,
                   unbounded-delays, directory, bytestring, network-uri
    other-modules: Find, Messages, Utilities, Links, Download
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -threaded
