name: rule34-paheal-downloader
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: ../LICENSE.txt
maintainer: z.palmer@openmailbox.org
synopsis: Downloader for rule34.paheal.net with a GUI and CMD interface.
description:
    Downloader for rule34.paheal.net with a GUI and CMD interface.
    .
    GUI is built using gtk2hs.
    .
    /Installation/
    .
    >cabal configure
    >cabal build
    >cabal install
    /Running/
    If ~/.cabal/bin is in your path, simply execute
    .
    >r34Downloader
    or
    >r34DownloaderGUI
    .
    If it isn't, then run
    >~/.cabal/bin/r34Downloader
category: Web
author: ZedPea
extra-source-files:
    ChangeLog.md

executable r34DownloaderGUI
    main-is: r34MainGUI.hs
    build-depends:
        base >=4.9 && <4.10,
        HTTP >=4000.3.4 && <4000.4,
        network-uri >=2.6.1.0 && <2.7,
        tagsoup ==0.14.*,
        bytestring >=0.10.8.1 && <0.11,
        directory >=1.2.6.2 && <1.3,
        unbounded-delays >=0.1.0.9 && <0.2,
        filepath >=1.4.1.0 && <1.5,
        cmdargs >=0.10.14 && <0.11,
        gtk3 >=0.14.6 && <0.15,
        glib >=0.13.4.1 && <0.14,
        text >=1.2.2.1 && <1.3
    default-language: Haskell2010
    ghc-options: -threaded

executable r34Downloader
    main-is: r34MainCMD.hs
    build-depends:
        base >=4.9 && <4.10,
        HTTP >=4000.3.4 && <4000.4,
        network-uri >=2.6.1.0 && <2.7,
        tagsoup ==0.14.*,
        bytestring >=0.10.8.1 && <0.11,
        directory >=1.2.6.2 && <1.3,
        unbounded-delays >=0.1.0.9 && <0.2,
        filepath >=1.4.1.0 && <1.5,
        cmdargs >=0.10.14 && <0.11
    default-language: Haskell2010
    other-extensions: DeriveDataTypeable
    ghc-options: -threaded
